--- a/app/views/layouts/_footer.haml
+++ b/app/views/layouts/_footer.haml
@@ -4,7 +4,7 @@
       .col-sm-9
         %ul.list-inline.general-align.mb-25
           %li
-            %a.nav-link{href: "#"} Home
+            = link_to 'Home', root_path, class: 'nav-link'
           %li
             %a.nav-link{href: "#"} Shop
           %li
