add log_in, sign_up and reset_password pages

--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -44,8 +44,5 @@
                 %a{href: "#"} Photo
               %li
                 %a{href: "#"} Web design
-              %li.divider{role: "separator"}
-              %li
-                = sign_helper  
-          %li
-            %a{href: "#"} My account
+              = log_out_helper
+          = log_in_up_helper
