--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -29,8 +29,8 @@
                 %a.collapse-link{href: "#"} Photo
               %li
                 %a.collapse-link{href: "#"} Web design
-          %li
-            %a{href: "#"} My account
+          = log_in_up_helper
+          = log_out_helper
       .hidden-xs
         %ul.nav.navbar-nav
           %li
