--- a/app/views/devise/shared/_omniouth.haml
+++ b/app/views/devise/shared/_omniouth.haml
@@ -1,3 +1,3 @@
-%a.general-login-icon{href: "#"}
+= link_to user_facebook_omniauth_authorize_path, class: 'general-login-icon' do
   %i.fa.fa-facebook-official
 %p.general-login-text or
