add rspec, ffaker, update table fields, update seeds, add image, name to user

--- a/app/views/book/show.haml
+++ b/app/views/book/show.haml
@@ -41,7 +41,7 @@
       .general-info-wrap.divider-lg
         .clearfix
           %p.pull-left Dimensions
-          %p.lead.small.pull-right= @book.dimension
+          %p.lead.small.pull-right= dimension
       .general-info-wrap.divider-lg
         .clearfix
           %p.pull-left Materials
