add factories for Book, improve seeds.rb, bug fix

--- a/app/views/book/show.haml
+++ b/app/views/book/show.haml
@@ -37,7 +37,7 @@
       .general-info-wrap.divider-lg
         .clearfix
           %p.pull-left Year of publication
-          %p.lead.small.pull-right= publication_year
+          %p.lead.small.pull-right= @book.published_at
       .general-info-wrap.divider-lg
         .clearfix
           %p.pull-left Dimensions
