improuve authors_helper, add test for it, make clikable home page, add dinamical view for book pages

--- a/app/views/book/show.haml
+++ b/app/views/book/show.haml
@@ -16,7 +16,7 @@
             %img{src: "https://www.smashingmagazine.com/wp-content/uploads/2015/09/smashing-book-5-2-large.jpg"}
     .col-sm-6
       %h1.mt-res-0= @book.title
-      %p.lead.small= authors
+      %p.lead.small= authors_to_list(@book)
       .row
         .col-xs-12.col-md-4
           %p.h1.in-gold-500.mt-10= number_to_currency(@book.price)
@@ -41,7 +41,7 @@
       .general-info-wrap.divider-lg
         .clearfix
           %p.pull-left Dimensions
-          %p.lead.small.pull-right= dimension
+          %p.lead.small.pull-right= dimension_for(@book)
       .general-info-wrap.divider-lg
         .clearfix
           %p.pull-left Materials
