--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -23,12 +23,9 @@
           %li
             %a{type: "button", 'data-toggle': "collapse", href: "#menu", 'aria-expanded': "false", 'aria-controls': "menu"} Shop
             %ul#menu.collapse.list-unstyled.pl-30.mb-10{'aria-expanded': "false"}
-              %li
-                %a.collapse-link{href: "#"} Mobile development
-              %li
-                %a.collapse-link{href: "#"} Photo
-              %li
-                %a.collapse-link{href: "#"} Web design
+              - @categories.each do |category|
+                %li
+                  %a.collapse-link{href: '#'}= category.type_of
           = log_in_up_helper
           = log_out_helper
       .hidden-xs
@@ -38,11 +35,8 @@
           %li.dropdown
             %a.dropdown-toggle{href: "#", 'data-toggle': "dropdown", role: "button", 'aria-haspopup': "true", 'aria-expanded': "false"} Shop
             %ul.dropdown-menu
-              %li
-                %a{href: "#"} Mobile development
-              %li
-                %a{href: "#"} Photo
-              %li
-                %a{href: "#"} Web design
+              - @categories.each do |category|
+                %li
+                  %a{href: "#"}= category.type_of
               = log_out_helper
           = log_in_up_helper
