--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -3,31 +3,21 @@
     %ol.carousel-indicators
       %li.active{'data-target': "#slider", 'data-slide-to': "0"}
       %li{'data-target': "#slider", 'data-slide-to': "1"}
+      %li{'data-target': "#slider", 'data-slide-to': "2"}
     .carousel-inner{role: "listbox"}
-      .item.active
-        .row
-          .col-sm-5
-            .general-img-wrap
-              %img.img-shadow.general-thumbnail-img{src: "http://jonathantweedy.com/resources/thumbs/SmashingBook5ResponsiveWebDesign.jpg", alt: "design-book"}
-          .col-sm-7
-            .mb-60
-              %h1 Real-Life Responsive Web Design
-              %p.lead Smart front-end techniques and design patterns derived from real-life responsive projects
-              %p.lead.small Vitaly Friedman, Daniel Mall,Vitaly Friedman
-              .general-align
-                %button.disabled.btn Buy Now
-      .item
-        .row
-          .col-sm-5
-            .general-img-wrap
-              %img.img-shadow.general-thumbnail-img{src: "http://jonathantweedy.com/resources/thumbs/SmashingBook5ResponsiveWebDesign.jpg", alt: "design-book"}
-          .col-sm-7
-            .mb-60
-              %h1 Real-Life Responsive Web Design
-              %p.lead Smart front-end techniques and design patterns derived from real-life responsive projects
-              %p.lead.small Vitaly Friedman, Daniel Mall,Vitaly Friedman
-              .general-align
-                %button.btn.btn-primary Buy Now
+      - @latest_books.each do |fresh_book|
+        .item{class: "#{'active' if @latest_books.first == fresh_book}"}
+          .row
+            .col-sm-5
+              .general-img-wrap
+                %img.img-shadow.general-thumbnail-img{src: "http://jonathantweedy.com/resources/thumbs/SmashingBook5ResponsiveWebDesign.jpg", alt: "design-book"}
+            .col-sm-7
+              .mb-60
+                %h1= fresh_book.title
+                %p.lead= fresh_book.description
+                %p.lead.small= authors_to_list(fresh_book)
+                .general-align
+                  %button.btn.btn-primary Buy Now
     %a.left.carousel-control{href: "#slider", role: "button", 'data-slide': "prev"}
       %span.icon-prev{'aria-hidden': "true"}
       %span.sr-only Previous
@@ -39,71 +29,24 @@
     %h2.h1 Welcome to our amazing Bookstore!
     .mb-res-50
       %p We pore through hundreds of new books each month and select the five best we can find to share with our members.
-    = link_to 'Get Started', catalog_path ,class: 'button btn btn-default' 
+    = link_to 'Get Started', catalog_path ,class: 'button btn btn-default'
   .mb-35
     %h3 Best Sellers
     .row
-      .col-sm-6.col-md-3
-        .general-thumb-wrap
-          .thumbnail.general-thumbnail
-            %img.img-shadow.general-thumbnail-img{src: "http://jonathantweedy.com/resources/thumbs/SmashingBook5ResponsiveWebDesign.jpg", alt: "design-book"}
-            .thumb-hover
-              .general-thumb-link-wrap
-                %a.thumb-hover-link{href: "#"}
-                  %i.fa.fa-eye.thumb-icon{'aria-hidden': "true"}
-                %a.thumb-hover-link{href: "#"}
-                  %i.fa.fa-shopping-cart.thumb-icon
-        .mb-35
-          .clearfix
-            %p.pull-right.font-16.in-gold-500 €28.50
-            %p.title.mr-55 Android Programming for Beginners
-          %span.divider-sm
-          %p.lead.small John Horton
-      .col-sm-6.col-md-3
-        .general-thumb-wrap
-          .thumbnail.general-thumbnail.disabled
-            %img.img-shadow.general-thumbnail-img{src: "http://jonathantweedy.com/resources/thumbs/SmashingBook5ResponsiveWebDesign.jpg", alt: "design-book"}
-            .thumb-hover
-              .general-thumb-link-wrap
-                %a.thumb-hover-link{href: "#"}
-                  %i.fa.fa-eye.thumb-icon{'aria-hidden': "true"}
-                %a.thumb-hover-link{href: "#"}
-                  %i.fa.fa-shopping-cart.thumb-icon
-        .mb-35
-          .clearfix
-            %p.pull-right.font-16.in-gold-500 €28.50
-            %p.title.mr-55 Android Programming for Beginners
-          %span.divider-sm
-          %p.lead.small John Horton
-      .col-sm-6.col-md-3
-        .general-thumb-wrap
-          .thumbnail.general-thumbnail
-            %img.img-shadow.general-thumbnail-img{src: "http://jonathantweedy.com/resources/thumbs/SmashingBook5ResponsiveWebDesign.jpg", alt: "design-book"}
-            .thumb-hover
-              .general-thumb-link-wrap
-                %a.thumb-hover-link{href: "#"}
-                  %i.fa.fa-eye.thumb-icon{'aria-hidden': "true"}
-                %a.thumb-hover-link{href: "#"}
-                  %i.fa.fa-shopping-cart.thumb-icon
-        .mb-35
-          .clearfix
-            %p.pull-right.font-16.in-gold-500 €28.50
-            %p.title.mr-55 Android Programming for Beginners
-          %span.divider-sm
-          %p.lead.small John Horton
-      .col-sm-6.col-md-3
-        .general-thumb-wrap
-          .thumbnail.general-thumbnail
-            %img.img-shadow.general-thumbnail-img{src: "http://jonathantweedy.com/resources/thumbs/SmashingBook5ResponsiveWebDesign.jpg", alt: "design-book"}
-            .thumb-hover
-              .general-thumb-link-wrap
-                %a.thumb-hover-link{href: "#"}
-                  %i.fa.fa-eye.thumb-icon{'aria-hidden': "true"}
-                %a.thumb-hover-link{href: "#"}
-                  %i.fa.fa-shopping-cart.thumb-icon
-        .mb-35
-          .clearfix
-            %p.pull-right.font-16.in-gold-500 €28.50
-            %p.title.mr-55 Android Programming for Beginners
-          %span.divider-sm
-          %p.lead.small John Horton
+      - @best_sellers.each do |selling|
+        .col-sm-6.col-md-3
+          .general-thumb-wrap
+            .thumbnail.general-thumbnail
+              %img.img-shadow.general-thumbnail-img{src: "http://jonathantweedy.com/resources/thumbs/SmashingBook5ResponsiveWebDesign.jpg", alt: "design-book"}
+              .thumb-hover
+                .general-thumb-link-wrap
+                  = link_to book_path(selling), class: 'thumb-hover-link' do
+                    %i.fa.fa-eye.thumb-icon{'aria-hidden': "true"}
+                  %a.thumb-hover-link{href: "#"}
+                    %i.fa.fa-shopping-cart.thumb-icon
+          .mb-35
+            .clearfix
+              %p.pull-right.font-16.in-gold-500= number_to_currency(selling.price)
+              %p.title.mr-55= selling.title
+            %span.divider-sm
+            %p.lead.small= authors_to_list(selling)
