--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -1,12 +1,11 @@
 %main.container
   #slider.carousel.slide{'data-ride': "carousel"}
     %ol.carousel-indicators
-      %li.active{'data-target': "#slider", 'data-slide-to': "0"}
-      %li{'data-target': "#slider", 'data-slide-to': "1"}
-      %li{'data-target': "#slider", 'data-slide-to': "2"}
+      - @latest_books.each_index do |index|
+        %li{'data-target': "#slider", 'data-slide-to': "{index}", class: "#{active(index)}"}
     .carousel-inner{role: "listbox"}
-      - @latest_books.each do |fresh_book|
-        .item{class: "#{'active' if @latest_books.first == fresh_book}"}
+      - @latest_books.each_with_index do |fresh_book, index|
+        .item{class: "#{active(index)}"}
           .row
             .col-sm-5
               .general-img-wrap
