--- a/app/views/book/index.haml
+++ b/app/views/book/index.haml
@@ -1,5 +1,5 @@
 %main.container
-  %h1.general-title-margin Сatalog
+  %h1.general-title-margin Catalog
   .hidden-xs.clearfix
     .dropdowns.pull-right
       .dropdown.width-240
