--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -1,51 +1,10 @@
 %main.container
-  #slider.carousel.slide{'data-ride': "carousel"}
-    %ol.carousel-indicators
-      - @latest_books.each_index do |index|
-        %li{'data-target': "#slider", 'data-slide-to': "{index}", class: "#{active(index)}"}
-    .carousel-inner{role: "listbox"}
-      - @latest_books.each_with_index do |fresh_book, index|
-        .item{class: "#{active(index)}"}
-          .row
-            .col-sm-5
-              .general-img-wrap
-                %img.img-shadow.general-thumbnail-img{src: "http://jonathantweedy.com/resources/thumbs/SmashingBook5ResponsiveWebDesign.jpg", alt: "design-book"}
-            .col-sm-7
-              .mb-60
-                %h1= fresh_book.title
-                %p.lead= fresh_book.description
-                %p.lead.small= authors_to_list(fresh_book)
-                .general-align
-                  %button.btn.btn-primary Buy Now
-    %a.left.carousel-control{href: "#slider", role: "button", 'data-slide': "prev"}
-      %span.icon-prev{'aria-hidden': "true"}
-      %span.sr-only Previous
-    %a.right.carousel-control{href: "#slider", role: "button", 'data-slide': "next"}
-      %span.icon-next{'aria-hidden': "true"}
-      %span.sr-only Next
+  = render 'carousel'
 .container
   .jumbotron.text-center.mb-0
-    %h2.h1 Welcome to our amazing Bookstore!
+    %h2.h1= t('page.home.greeting')
     .mb-res-50
-      %p We pore through hundreds of new books each month and select the five best we can find to share with our members.
+      %p= t('page.home.text')
     = link_to 'Get Started', catalog_path ,class: 'button btn btn-default'
   .mb-35
-    %h3 Best Sellers
-    .row
-      - @best_sellers.each do |selling|
-        .col-sm-6.col-md-3
-          .general-thumb-wrap
-            .thumbnail.general-thumbnail
-              %img.img-shadow.general-thumbnail-img{src: "http://jonathantweedy.com/resources/thumbs/SmashingBook5ResponsiveWebDesign.jpg", alt: "design-book"}
-              .thumb-hover
-                .general-thumb-link-wrap
-                  = link_to book_path(selling), class: 'thumb-hover-link' do
-                    %i.fa.fa-eye.thumb-icon{'aria-hidden': "true"}
-                  %a.thumb-hover-link{href: "#"}
-                    %i.fa.fa-shopping-cart.thumb-icon
-          .mb-35
-            .clearfix
-              %p.pull-right.font-16.in-gold-500= number_to_currency(selling.price)
-              %p.title.mr-55= selling.title
-            %span.divider-sm
-            %p.lead.small= authors_to_list(selling)
+    = render 'best_sellers'
