--- a/app/views/book/show.haml
+++ b/app/views/book/show.haml
@@ -1,5 +1,5 @@
 %main.container
-  %a.general-back-link{href: "#"}
+  =link_to :back, class: 'general-back-link' do
     %i.fa.fa-long-arrow-left.mr-15
     = t('button.back_to_results')
   .row
@@ -24,7 +24,7 @@
           .input-group.general-position
             %a.input-link{href: "#"}
               %i.fa.fa-minus.line-height-40
-            %input.form-control.quantity-input{type: "text"}
+            %input.form-control.quantity-input{type: "text", value: 1}
             %a.input-link{href: "#"}
               %i.fa.fa-plus.line-height-40
         .col-xs-7.col-md-5
@@ -33,7 +33,6 @@
         %p= t('page.book.show.description')
         %p.lead.small.line-height-2
           = @book.description
-          %a.in-gold-500.ml-10{href: "#"}= t('button.read_more')
       .general-info-wrap.divider-lg
         .clearfix
           %p.pull-left= t('page.book.show.published_at')
