--- a/app/views/book/index.haml
+++ b/app/views/book/index.haml
@@ -18,8 +18,7 @@
     .dropdown
       = render 'filters'
   .mb-120
-    .row
+    .row#books-container
       = render @books
     .text-center
-      %button.btn.btn-primary= t('button.view_more')
-      / "https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcQ352GRUKdIFLP3va0Tj7QREidI4lwUABrtUJbQehqIL02O_blo"
+      = link_to t('button.view_more'), catalog_path(page: @books.current_page + 1), id: 'load-more-books', class: 'btn btn-primary', remote: true
