add filtration by categories

--- a/app/views/categories/_category.haml
+++ b/app/views/categories/_category.haml
@@ -1,4 +1,4 @@
 %li.mr-35
-  %a.filter-link{href: "#"}
+  = link_to catalog_path(category: category), class: 'filter-link' do
     = category.type_of
     %span.badge.general-badge= category.books.count
