--- a/app/views/book/index.haml
+++ b/app/views/book/index.haml
@@ -6,14 +6,18 @@
         = render 'filters'
     %ul.list-inline.pt-10.mb-25.mr-240
       %li.mr-35
-        %a.filter-link{href: "#"}
+        = link_to catalog_path, class: 'filter-link' do
           = t('button.all')
           %span.badge.general-badge= Book.count
       = render @categories
   .dropdowns.mb-25.visible-xs
     %p.lead.small.mb-10= t('page.book.index.by_category')
     .dropdown
-      = render 'filters'
+      %a.dropdown-toggle.lead.small{href: "#", 'data-toggle': "dropdown", role: "button", 'aria-haspopup': "true", 'aria-expanded': "false"}
+        = t('button.all')
+        %i.fa.fa-angle-down.dropdown-icon.pull-right
+      %ul.dropdown-menu
+        = render @categories
     %p.lead.small.mb-10= t('page.book.index.sort_by')
     .dropdown
       = render 'filters'
@@ -21,4 +25,4 @@
     .row#books-container
       = render @books
     .text-center
-      = link_to t('button.view_more'), catalog_path(page: @books.current_page + 1), id: 'load-more-books', class: 'btn btn-primary', remote: true
+      = link_to t('button.view_more'), catalog_path(page: @books.current_page + 1, category: @category_id), id: 'load-more-books', class: 'btn btn-primary', remote: true unless @books.last_page? 
