--- a/app/views/layouts/_categories.haml
+++ b/app/views/layouts/_categories.haml
@@ -1,3 +1,3 @@
-- @categories.each do |category|
+- @categories&.each do |category|
   %li
     = link_to category.type_of, catalog_path(category: category), class: 'collapse-link'
