--- a/app/views/book/index.haml
+++ b/app/views/book/index.haml
@@ -21,8 +21,7 @@
     %p.lead.small.mb-10= t('page.book.index.sort_by')
     .dropdown
       = render 'filters'
-  .mb-120
-    .row#books-container
-      = render @books
+  .mb-120#books-container
+    = group_by4in_row(@books)
     .text-center
       = link_to t('button.view_more'), catalog_path(page: @books.current_page + 1, category: @category_id), id: 'load-more-books', class: 'btn btn-primary', remote: true unless @books.last_page? 
