--- a/app/views/book/_filters.haml
+++ b/app/views/book/_filters.haml
@@ -7,6 +7,6 @@
   %li
     = link_to t('button.popular_first'), catalog_path(category: @category_id, filter: :popular)
   %li
-    = link_to t('button.low_to_hight'), catalog_path(category: @category_id, filter: :up)
+    = link_to t('button.low_to_hight'), catalog_path(category: @category_id, filter: :price_up)
   %li
-    = link_to t('button.hight_to_low'), catalog_path(category: @category_id, filter: :down)
+    = link_to t('button.hight_to_low'), catalog_path(category: @category_id, filter: :price_down)
