--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -7,12 +7,12 @@
         %span.icon-bar
         %span.icon-bar
       %a.navbar-brand= t('header.logo')
-      %a.shop-link.pull-right.visible-xs{href: "#"}
+      %a.shop-link.pull-right.visible-xs{href: "#{cart_path}"}
         %span.shop-icon
-          %span.shop-quantity 3
-    %a.shop-link.pull-right.hidden-xs{href: "#"}
+          %span.shop-quantity= current_order.order_items.size
+    %a.shop-link.pull-right.hidden-xs{href: "#{cart_path}"}
       %span.shop-icon
-        %span.shop-quantity 3
+        %span.shop-quantity= current_order.order_items.size
     #navbar.navbar-collapse.collapse.pl-30{'aria-expanded': "false"}
       .visible-xs
         %button.close{type: "button", 'aria-label': "Close"}
