--- a/app/views/books/_book.haml
+++ b/app/views/books/_book.haml
@@ -10,6 +10,6 @@
             %i.fa.fa-shopping-cart.thumb-icon
   .general-thumb-info
     %p.title= book.title
-    %p.font-16.in-gold-500= book.price
+    %p.font-16.in-gold-500= number_to_currency(book.price)
     %span.divider-sm
     %p.lead.small= authors_to_list(book)
