--- a/app/views/book/show.haml
+++ b/app/views/book/show.haml
@@ -18,17 +18,19 @@
       %h1.mt-res-0= @book.title
       %p.lead.small= authors_to_list(@book)
       .row
-        .col-xs-12.col-md-4
-          %p.h1.in-gold-500.mt-10= number_to_currency(@book.price)
-        .col-xs-5.col-md-3
-          .input-group.general-position
-            %a.input-link{href: "#"}
-              %i.fa.fa-minus.line-height-40
-            %input.form-control.quantity-input{type: "text", value: 1}
-            %a.input-link{href: "#"}
-              %i.fa.fa-plus.line-height-40
-        .col-xs-7.col-md-5
-          %button.btn.btn-default.pull-right.general-position= t('button.add_to_cart')
+        = form_for @order_item, remote: true do |f|
+          .col-xs-12.col-md-4
+            %p.h1.in-gold-500.mt-10= number_to_currency(@book.price)
+          .col-xs-5.col-md-3
+            .input-group.general-position
+              %a.input-link{href: "#"}
+                %i.fa.fa-minus.line-height-40
+              = f.text_field :quantity, value: 1, class: 'form-control quantity-input', min: 1
+              %a.input-link{href: "#"}
+                %i.fa.fa-plus.line-height-40
+          .col-xs-7.col-md-5
+            = f.hidden_field :book_id, value: @book.id
+            = f.submit t('button.add_to_cart'), class: 'btn btn-default pull-right general-position'
       .general-info-wrap.divider-lg
         %p= t('page.book.show.description')
         %p.lead.small.line-height-2
