--- a/app/views/carts/_xs_order_items.haml
+++ b/app/views/carts/_xs_order_items.haml
@@ -1,6 +1,6 @@
 - @order_items.each do |order_item|
   .general-cart-item.divider-lg-bottom
-    %button.close.general-cart-close{type: "button", 'aria-label': "Close"}
+    = button_to order_item, { data: { confirm: "Are you sure you wish to delete the book '#{order_item.book.title}' from your cart?" }, method: :delete, remote: true, class: "close general-cart-close", 'aria-label': 'Close' } do
       %span{'aria-hidden': "true"} &times;
     .general-img-wrap-table
       %img.cart-img-shadow{src: "http://jonathantweedy.com/resources/thumbs/SmashingBook5ResponsiveWebDesign.jpg", alt: "design-book"}
