--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -8,11 +8,9 @@
         %span.icon-bar
       %a.navbar-brand= t('header.logo')
       %a.shop-link.pull-right.visible-xs{href: "#{cart_path}"}
-        %span.shop-icon
-          %span.shop-quantity= current_order.order_items.size
+        %span.shop-icon= shop_icon_quantity(current_order.order_items.size)
     %a.shop-link.pull-right.hidden-xs{href: "#{cart_path}"}
-      %span.shop-icon
-        %span.shop-quantity= current_order.order_items.size
+      %span.shop-icon= shop_icon_quantity(current_order.order_items.size)
     #navbar.navbar-collapse.collapse.pl-30{'aria-expanded': "false"}
       .visible-xs
         %button.close{type: "button", 'aria-label': "Close"}
