--- a/app/views/carts/_order_items.haml
+++ b/app/views/carts/_order_items.haml
@@ -7,13 +7,7 @@
       %p.title= order_item.book.title
     %td
       %span.font-16.in-gold-500= number_to_currency(order_item.book.price)
-    %td
-      .input-group
-        %a.input-link{href: "#"}
-          %i.fa.fa-minus.line-heaght-40
-        %input.form-control.quantity-input{type: "text", value: order_item.quantity}
-        %a.input-link{href: "#"}
-          %i.fa.fa-plus.line-heaght-40
+    = render 'carts/quantity', order_item: order_item
     %td
       %span.font-16.in-gold-500= number_to_currency(order_item.total_price)
     %td
