--- a/app/views/carts/_order_summary.haml
+++ b/app/views/carts/_order_summary.haml
@@ -2,11 +2,12 @@
   .row
     .col-sm-4
       .input-group.general-input-group
-        %label.input-label= t('cart.coupon')
-        %input.form-control.mb-30{type: "text", placeholder: "Enter Your Coupon Code "}
+        = form_tag cart_path, method: :put, remote: true
+        = label_tag :name, t('cart.coupon'), class: 'input-label'
+        = text_field_tag(:name, nil, placeholder: 'Enter Your Coupon Code ', class: 'form-control mb-30')
         %div
           %button.btn.btn-primary.mr-5.mb-15.visible-xs-inline-block= t('cart.apply_coupon')
-          %button.btn.btn-primary.mb-15.res-block= t('cart.update')
+          = submit_tag t('cart.update'), class: 'btn btn-primary mb-15 res-block'
     .col-sm-8
       .res-mr-200.text-center.general-text-right
         %p.in-gold-500.font-18= t('cart.summary')
@@ -20,7 +21,7 @@
             %td
               %p.font-16= t('cart.coupon')+':'
             %td
-              %p.font-16 €0.00
+              %p.font-16= number_to_currency current_order.discount
           %tr
             %td
               %strong.font-16= t('cart.total')+':'
