--- a/app/views/home/_carousel.haml
+++ b/app/views/home/_carousel.haml
@@ -15,7 +15,7 @@
               %p.lead= fresh_book.description
               %p.lead.small= authors_to_list(fresh_book)
               .general-align
-                %button.btn.btn-primary= t('button.by_now')
+                = button_to t('button.by_now'), order_items_path(order_item: {quantity: 1, book_id: fresh_book.id}), { method: :post, remote: true, class: 'btn btn-primary' }
   %a.left.carousel-control{href: "#slider", role: "button", 'data-slide': "prev"}
     %span.icon-prev{'aria-hidden': "true"}
     %span.sr-only= t('page.home.carusel.prev')
