--- a/app/views/book/_filters.haml
+++ b/app/views/book/_filters.haml
@@ -1,5 +1,5 @@
 %a.dropdown-toggle.lead.small{href: "#", 'data-toggle': "dropdown", role: "button", 'aria-haspopup': "true", 'aria-expanded': "false"}
-  = t('button.newest_first')
+  = active_filter
   %i.fa.fa-angle-down.dropdown-icon.pull-right
 %ul.dropdown-menu
   %li
@@ -10,3 +10,7 @@
     = link_to t('button.low_to_hight'), catalog_path(category: @category_id, filter: :price_up)
   %li
     = link_to t('button.hight_to_low'), catalog_path(category: @category_id, filter: :price_down)
+  %li
+    = link_to t('button.title_A-Z'), catalog_path(category: @category_id, filter: :a_z)
+  %li
+    = link_to t('button.title_Z-A'), catalog_path(category: @category_id, filter: :z_a)
