--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,5 +9,6 @@
     = javascript_include_tag 'application'
   %body
     = render 'layouts/header'
+    = render 'layouts/flash'
     = yield
     = render 'layouts/footer'
