finished with form object, add translations for addresses partial

--- a/app/views/shared/_addresses_form.haml
+++ b/app/views/shared/_addresses_form.haml
@@ -24,5 +24,4 @@
               %i.fa.fa-check
             %span.checkbox-text= t('settings.use_billing')
     .ral-text-align.mb-60
-      = f.submit
-      %button.btn.disabled.center-block.mb-20= t('settings.save')
+      = f.submit t('settings.save'), class: 'btn disabled center-block mb-20'
