--- a/app/views/shared/_address.haml
+++ b/app/views/shared/_address.haml
@@ -1,22 +1,22 @@
 .form-group.has-error
-  = ff.label :first_name, 'First Name', class: 'control-label input-label'
-  = ff.text_field :first_name, class: 'form-control',  autocomplete: 'off', placeholder: 'First Name'
-  %span.help-block Please enter your first name
+  = ff.label :first_name, t('settings.first_name'), class: 'control-label input-label'
+  = ff.text_field :first_name, class: 'form-control',  autocomplete: 'off', placeholder: t('settings.first_name')
+  %span.help-block
 .form-group
   = ff.label :last_name, class: 'control-label input-label'
-  = ff.text_field :last_name, class: 'form-control',  autocomplete: 'off', placeholder: 'Last Name'
+  = ff.text_field :last_name, class: 'form-control',  autocomplete: 'off', placeholder: t('settings.last_name')
 .form-group
-  = ff.label :address, 'Address', class: 'control-label input-label'
-  = ff.text_field :address, class: 'form-control',  autocomplete: 'off', placeholder: 'Address'
+  = ff.label :address, t('settings.address'), class: 'control-label input-label'
+  = ff.text_field :address, class: 'form-control',  autocomplete: 'off', placeholder: t('settings.address')
 .form-group
-  = ff.label :city, 'City', class: 'control-label input-label'
-  = ff.text_field :city, class: 'form-control',  autocomplete: 'off', placeholder: 'City'
+  = ff.label :city, t('settings.city'), class: 'control-label input-label'
+  = ff.text_field :city, class: 'form-control',  autocomplete: 'off', placeholder: t('settings.city')
 .form-group
-  = ff.label :zip, 'Zip', class: 'control-label input-label'
-  = ff.text_field :zip, class: 'form-control',  autocomplete: 'off', placeholder: 'Zip'
+  = ff.label :zip, t('settings.zip'), class: 'control-label input-label'
+  = ff.text_field :zip, class: 'form-control',  autocomplete: 'off', placeholder: t('settings.zip')
 .form-group
-  = ff.label :country, 'Country', class: 'control-label input-label'
-  = ff.country_select(:country, { priority_countries: ['UA'], placeholder: 'Select a country' }, { class: 'form-control', id: 'country' } )
+  = ff.label :country, t('settings.country'), class: 'control-label input-label'
+  = ff.country_select(:country, { priority_countries: ['UA'], placeholder: t('settings.country_select') }, { class: 'form-control', id: 'country' } )
 .form-group.mb-55
   = ff.label :phone, 'Phone', class: 'control-label input-label'
   = ff.text_field :phone, class: 'form-control',  autocomplete: 'off', placeholder: 'Example +355 66 123 4567'
