--- a/app/views/settings/new.haml
+++ b/app/views/settings/new.haml
@@ -17,8 +17,7 @@
           %p.in-gold-500.font-18.mb-25= t('settings.remove_account')
           %form
             .general-settings-btn
-              = button_to t('settings.please_remove_account'), registration_path(resource_name), data: { confirm: 'Are you sure?' }, method: :delete, class: 'btn btn-default mb-20'
-              / %button.btn.disabled.mb-20= t('settings.please_remove_account')
+              = button_to t('settings.please_remove_account'), registration_path(resource_name), method: :delete, class: 'btn btn-default mb-20'
             .form-group.checkbox.general-settings-checkbox
               %label.checkbox-label
                 %input.checkbox-input{type: "checkbox", hidden: "true"}
