--- a/app/views/shared/_addresses_form.haml
+++ b/app/views/shared/_addresses_form.haml
@@ -1,5 +1,5 @@
 #address.general-main-wrap.tab-pane.fade.in.active{role: "tabpanel"}
-  = form_with url: settings_path do |f|
+  = form_with url: settings_path, id: 'addresses' do |f|
     .hidden-xs.hidden-sm
       .row
         .col-md-5
@@ -24,4 +24,4 @@
               %i.fa.fa-check
             %span.checkbox-text= t('settings.use_billing')
     .ral-text-align.mb-60
-      = f.submit t('settings.save'), class: 'btn disabled center-block mb-20'
+      = f.submit t('settings.save'), class: 'button btn btn-default center-block mb-20'
