--- a/app/views/carts/_order_summary.haml
+++ b/app/views/carts/_order_summary.haml
@@ -12,19 +12,4 @@
       .res-mr-200.text-center.general-text-right
         %p.in-gold-500.font-18= t('cart.summary')
         %table.general-summary-table.general-summary-table-right.general-text-right
-          %tr
-            %td
-              %p.font-16= t('cart.subtotal')+':'
-            %td
-              %p.font-16= number_to_currency current_order.subtotal
-          %tr
-            %td
-              %p.font-16= t('cart.coupon')+':'
-            %td
-              %p.font-16= number_to_currency current_order.discount
-          %tr
-            %td
-              %strong.font-16= t('cart.total')+':'
-            %td
-              %strong.font-16= number_to_currency current_order.total || '--'
-        %button.btn.btn-default.mb-20.visible-xs-inline-block= t('cart.checkout')
+          = render 'shared/order_summary_numbers'
