--- a/app/views/shared/_addresses_form.haml
+++ b/app/views/shared/_addresses_form.haml
@@ -10,12 +10,12 @@
       .col-md-5.mb-40
         .visible-xs.visible-sm
           %h3.general-subtitle.mt-0= t('settings.billing')
-        = f.fields_for @billing do |ff|
+        = f.fields_for @addresses.billing do |ff|
           = render 'shared/address', ff: ff
       .col-md-5.col-md-offset-1.mb-25
         .visible-xs.visible-sm
           %h3.general-subtitle.mt-0= t('settings.shipping')
-        = f.fields_for @shipping do |ff|
+        = f.fields_for @addresses.shipping do |ff|
           = render 'shared/address', ff: ff
         .form-group.checkbox
           %label.checkbox-label
