add rake tasks (seed Coupons and Deliveries types), finished second step of checkout

--- a/app/views/checkout/address.haml
+++ b/app/views/checkout/address.haml
@@ -28,5 +28,4 @@
             %span.checkbox-text= t('settings.use_billing')
     .general-text-align.mb-60
       = render 'checkout/order_summary'
-      = f.submit 'LOSALAS'
-      = link_to 'Save and Continue', next_wizard_path, class: 'btn center-block mb-20'
+      = f.submit 'Save and Continue', class: 'btn btn-default center-block mb-20'
