--- a/app/views/checkout/delivery.haml
+++ b/app/views/checkout/delivery.haml
@@ -3,7 +3,7 @@
   %h3.general-subtitle= t('delivery.delivery_method')
   = form_for current_order, url: wizard_path do |f|
     .visible-xs
-      = render 'checkout/partials/delivery-xs', f: f
+      = render 'checkout/partials/delivery-xs', f: f if false
     .hidden-xs.mb-res-50
       = render 'checkout/partials/delivery-lg', f: f
     = render 'checkout/order_summary'
