--- a/app/views/checkout/address.haml
+++ b/app/views/checkout/address.haml
@@ -22,7 +22,7 @@
           = render 'shared/address', ff: ff
         .form-group.checkbox
           %label.checkbox-label
-            %input.checkbox-input{type: "checkbox", hidden: "true"}
+            = f.check_box :use_billing, class: 'checkbox-input', id: 'use_billing', hidden: true
             %span.checkbox-icon
               %i.fa.fa-check
             %span.checkbox-text= t('settings.use_billing')
