--- a/app/views/checkout/confirm.haml
+++ b/app/views/checkout/confirm.haml
@@ -1,81 +1,27 @@
 %main.container.general-main-wrap
   = render 'checkout/progress'
   .row.mb-20
-    = render 'checkout/partials/confirm_all'
-  .visible-xs
-    .general-cart-item.divider-lg
-      .general-img-wrap-table
-        %img.cart-img-shadow{src: "http://jonathantweedy.com/resources/thumbs/SmashingBook5ResponsiveWebDesign.jpg", alt: "design-book"}
-      %p.title Android Programming for Beginners
-      %P.in-grey-600.fw-300 A recipe-based book to help you efficiently create amazing PHP-based applications with Laravel 5.x
-      %table.table
-        %tr
-          %td
-            %span.in-grey-600 Price
-          %td
-            %span.font-16.in-gold-500 €28.50
-        %tr
-          %td.vertical-middle
-            %span.in-grey-600 Quantity
-          %td
-            %span 1
-        %tr
-          %td
-            %span.in-grey-600 SubTotal
-          %td
-            %span.font-16.in-gold-500 €32.90
-    .general-cart-item.divider-lg.mb-55
-      .general-img-wrap-table
-        %img.cart-img-shadow{src: "http://jonathantweedy.com/resources/thumbs/SmashingBook5ResponsiveWebDesign.jpg", alt: "design-book"}
-      %p.title Android Programming for Beginners
-      %table.table
-        %tr
-          %td
-            %span.in-grey-600 Price
-          %td
-            %span.font-16.in-gold-500 €28.50
-        %tr
-          %td.vertical-middle
-            %span.in-grey-600 Quantity
-          %td
-            .input-group
-              %a.input-link{href: "#"}
-                %i.fa.fa-minus.line-heaght-40
-              %input.form-control.quantity-input{type: "text"}
-              %a.input-link{href: "#"}
-                %i.fa.fa-plus.line-heaght-40
-        %tr
-          %td
-            %span.in-grey-600 SubTotal
-          %td
-            %span.font-16.in-gold-500 €32.90
-  .hidden-xs.divider-lg.pt-20
-    %table.table.table-hover
-      %thead
-        %tr
-          %th
-            %span.in-grey-600 Book
-          %th.col-method
-          %th
-            %span.in-grey-600 Price
-          %th
-            %span.in-grey-600 Quantity
-          %th
-            %span.in-grey-600 Total
-      %tbody
-        %tr
-          %td
-            .general-img-wrap-table
-              %img.cart-img-shadow.pull-left{src: "http://jonathantweedy.com/resources/thumbs/SmashingBook5ResponsiveWebDesign.jpg", alt: "design-book"}
-          %td
-            %p.title Android Programming for Beginners
-            %p.in-grey-600.fw-300 Maximize the potential of Bootstrap with a collection of real-world site projects for better, faster, more responsive web applications
-          %td
-            %span.font-16.in-gold-500 €28.50
-          %td
-            %span.ml-30 1
-          %td
-            %span.font-16.in-gold-500 €32.90
+    .col-sm-3
+      %h3.general-subtitle= t('settings.shipping')
+      = render 'checkout/partials/addresses_short', address: @addresses.shipping
+    .col-sm-3
+      %h3.general-subtitle= t('settings.billing')
+      = render 'checkout/partials/addresses_short', address: @addresses.billing
+    .col-sm-3
+      %h3.general-subtitle= t('confirm.shipments')
+      %p.general-address
+        = current_order.delivery.method
+        %span.general-edit.clickable-step{ 'data-href': wizard_path(:delivery) }=t('confirm.edit')
+        %br
+        = current_order.delivery.duration
+    .col-sm-3
+      %h3.general-subtitle= t('confirm.payment_info')
+      %p.general-address
+        = current_order.secret_card_number
+        %span.general-edit.clickable-step{ 'data-href': wizard_path(:payment) }=t('confirm.edit')
+        %br
+        = current_order.credit_card.mm_yy
+  = render 'checkout/partials/list_of_items'
   = render 'checkout/order_summary'
   .text-center
     = link_to 'Place Order', next_wizard_path, class: 'btn btn-default mb-20'
