rename Book controller

--- a/app/views/reviews/create.js.erb
+++ b/app/views/reviews/create.js.erb
@@ -1,4 +1,4 @@
 $('form#post_review')[0].reset();
 $('header').after("<%= j(render 'layouts/flash') %>");
 $('html, body').animate({ scrollTop: 0 }, 'slow');
-// $('div.general-message-wrap.divider.form').fadeOut('slow');
+$('div.general-message-wrap.divider.form').fadeOut('slow');
