add links to footer

--- a/app/views/layouts/_footer.haml
+++ b/app/views/layouts/_footer.haml
@@ -6,11 +6,11 @@
           %li
             = link_to t('button.home'), root_path, class: 'nav-link'
           %li
-            = link_to t('button.shop'), '#', class: 'nav-link'
+            = link_to t('button.shop'), catalog_path, class: 'nav-link'
           %li
-            = link_to t('button.orders'), '#', class: 'nav-link' if user_signed_in?
+            = link_to t('button.orders'), orders_path, class: 'nav-link' if user_signed_in?
           %li
-            = link_to t('button.settings'), '#', class: 'nav-link' if user_signed_in?
+            = link_to t('button.settings'), new_setting_path, class: 'nav-link' if user_signed_in?
       .col-sm-3
         %p.general-nav-mail support@bookstore.com
         %p.general-nav-number (555)-555-5555
