--- a/app/views/books/index.haml
+++ b/app/views/books/index.haml
@@ -1,5 +1,5 @@
 %main.container
-  %h1.general-title-margin Catalog
+  %h1.general-title-margin= t('page.book.index.catalog')
   .hidden-xs.clearfix
     .dropdowns.pull-right
       .dropdown.width-240
@@ -24,4 +24,4 @@
   .mb-120#books-container
     = group_by4in_row(@books)
     .text-center
-      = link_to t('button.view_more'), catalog_path(page: @books.current_page + 1, category: @category_id, filter: @filter), id: 'load-more-books', class: 'btn btn-primary', remote: true unless @books.last_page? 
+      = link_to t('button.view_more'), catalog_path(page: @books.current_page + 1, category: @category_id, filter: @filter), id: 'load-more-books', class: 'btn btn-primary', remote: true unless @books.last_page?
