finish with last step in checkout, add validations for image and delivery

--- a/app/views/checkout/partials/_addresses_short.haml
+++ b/app/views/checkout/partials/_addresses_short.haml
@@ -6,6 +6,6 @@
   %br
   = address.city + ' ' + address.zip.to_s
   %br
-  = address.country
+  = country_name address
   %br
   = 'Phone' + address.phone
