--- a/app/views/checkout/complete.haml
+++ b/app/views/checkout/complete.haml
@@ -2,18 +2,18 @@
   = render 'checkout/progress'
   .text-center.mb-40
     %h3.general-subtitle= t('complete.thanks')
-    %p.fw-300= t('complete.has_been_sent_to') + current_order.user.email.capitalize
+    %p.fw-300= t('complete.has_been_sent_to') + @order.user.email.capitalize
   .row.mb-20
     .col-sm-6
       .visible-xs
-        %p.general-order-number.mb-0= current_order.sharp_number
-        %p.general-address.mb-30= current_order.creation_date
-      = render 'checkout/partials/addresses_short', address: @addresses.shipping
+        %p.general-order-number.mb-0= @order.sharp_number
+        %p.general-address.mb-30= @order.creation_date
+      = render 'checkout/partials/addresses_short', address: @order.shipping
     .col-sm-6.hidden-xs.text-right
-      %p.general-order-number.mb-0= current_order.sharp_number
-      %p.general-address.mb-30= current_order.creation_date
-  = render 'checkout/partials/list_of_items'
+      %p.general-order-number.mb-0= @order.sharp_number
+      %p.general-address.mb-30= @order.creation_date
+  = render 'checkout/partials/list_of_items', current_order: @order
   .mb-55
-  = render 'checkout/order_summary'
+  = render 'checkout/order_summary', current_order: @order
   .text-center
     = link_to 'Back to Store', next_wizard_path, class: 'btn btn-default mb-20'
