--- a/app/views/checkout/confirm.haml
+++ b/app/views/checkout/confirm.haml
@@ -24,4 +24,4 @@
   = render 'checkout/partials/list_of_items'
   = render 'checkout/order_summary'
   .text-center
-    = link_to 'Place Order', next_wizard_path, class: 'btn btn-default mb-20'
+    = button_to 'Place Order', wizard_path, method: :put, class: 'btn btn-default mb-20'
