split settings into two pages

--- a/app/views/settings/_edit_password.haml
+++ b/app/views/settings/_edit_password.haml
@@ -1,5 +1,5 @@
 %p.in-gold-500.font-18.mb-25= t('settings.password')
-= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, class: 'general-form-md divider-lg-bottom pb-25'}) do |f|
+= form_for(resource, as: resource_name, url: update_password_user_path(resource_name), html: { method: :put, class: 'general-form-md divider-lg-bottom pb-25'}) do |f|
   = devise_error_messages!
   .form-group.mb-30
     = f.label :current_password, t('settings.old_password'), class: "control-label input-label"
