--- a/app/views/settings/new.haml
+++ b/app/views/settings/new.haml
@@ -1,17 +1,9 @@
 %main.container
   %h1.general-title-margin= t('settings.settings')
   %ul.nav.clearfix.mb-20{role: "tablist"}
-    %li.tab-item.active{role: "presentation"}
-      %a.tab-link{href: "#address", 'aria-controls': "address", role: "tab", 'data-toggle': "tab"}= t('settings.address')
     %li.tab-item{role: "presentation"}
-      %a.tab-link{href: "#privacy", 'aria-controls': "privacy", role: "tab", 'data-toggle': "tab"}= t('settings.privacy')
+      = link_to t('settings.address'), new_setting_path, class: 'tab-link filter-link active'
+    %li.tab-item{role: "presentation"}
+      = link_to t('settings.privacy'), settings_path, class: 'tab-link'
   .tab-content
     = render 'shared/addresses_form'
-    #privacy.tab-pane.fade{role: "tabpanel"}
-      .row.mb-60
-        .col-sm-5
-          = render 'settings/edit_email'
-        .col-sm-5.col-sm-offset-1
-          = render 'settings/edit_password'
-        .col-sm-12
-          = render 'settings/remove_account'
