--- a/app/views/checkout/partials/_delivery-xs.haml
+++ b/app/views/checkout/partials/_delivery-xs.haml
@@ -1,4 +1,4 @@
-= f.collection_radio_buttons :delivery_id, @deliveries, :id, :method do |b|
+= f.collection_radio_buttons :delivery_id, @deliveries, :id, :name do |b|
   .general-cart-item.divider-lg-bottom
     %table.table
       %tr
