add cancancan, user and admin ability

--- a/app/views/orders/show.haml
+++ b/app/views/orders/show.haml
@@ -12,7 +12,7 @@
     .col-sm-3
       %h3.general-subtitle= t('confirm.shipments')
       %p.general-address
-        = @order.delivery.method
+        = @order.delivery.name
         %br
         = @order.delivery.duration
     .col-sm-3
