add feature test on Home page, add translations, add rake task for order_statuses

--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -5,6 +5,6 @@
     %h2.h1= t('page.home.greeting')
     .mb-res-50
       %p= t('page.home.text')
-    = link_to 'Get Started', catalog_path ,class: 'button btn btn-default'
+    = link_to t('button.get_started'), catalog_path ,class: 'button btn btn-default'
   .mb-35
     = render 'best_sellers'
