--- a/app/views/order_items/create.js.erb
+++ b/app/views/order_items/create.js.erb
@@ -1,4 +1,4 @@
-<% if @order.errors.any? || @order_item.errors.any? %>
+<% if current_order.errors.any? || @order_item.errors.any? %>
 alert('not valid.')
 <% else %>
   $('span.shop-icon').html("<%= j(shop_icon_quantity(current_order)) %>")
