add missing translations, add feature tests for Cart

--- a/app/views/checkout/address.haml
+++ b/app/views/checkout/address.haml
@@ -28,4 +28,4 @@
             %span.checkbox-text= t('settings.use_billing')
     .general-text-align.mb-60
       = render 'checkout/order_summary'
-      = f.submit 'Save and Continue', class: 'btn btn-default center-block mb-20'
+      = f.submit t('checkout.save_and_continue'), class: 'btn btn-default center-block mb-20'
