--- a/app/views/checkout/complete.haml
+++ b/app/views/checkout/complete.haml
@@ -16,4 +16,4 @@
   .mb-55
   = render 'checkout/order_summary', current_order: @order
   .text-center
-    = link_to 'Back to Store', next_wizard_path, class: 'btn btn-default mb-20'
+    = link_to t('button.back_to_store'), next_wizard_path, class: 'btn btn-default mb-20'
