--- a/app/views/checkout/delivery.haml
+++ b/app/views/checkout/delivery.haml
@@ -8,4 +8,4 @@
       = render 'checkout/partials/delivery-lg', f: f
     = render 'checkout/order_summary'
     .text-center
-      = f.submit 'Save and Continue', class: 'btn btn-default mb-20'
+      = f.submit t('checkout.save_and_continue'), class: 'btn btn-default mb-20'
