--- a/app/views/checkout/payment.haml
+++ b/app/views/checkout/payment.haml
@@ -1,27 +1,27 @@
 %main.container.mb-res-50
   = render 'checkout/progress'
-  %h3.general-subtitle Credit Card
+  %h3.general-subtitle= t('checkout.credit_card')
   = form_for @credit_card, url: wizard_path, method: :put, remote: true, html: { class: 'max-600 mb-80' } do |f|
     .form-group
-      = f.label :number, 'Card Number', class: 'control-label input-label'
-      = f.text_field :number, class: 'form-control', placeholder: 'Card Number'
-      %span.help-block Please enter a valid credit card number
+      = f.label :number, t('checkout.cart_number'), class: 'control-label input-label'
+      = f.text_field :number, class: 'form-control', placeholder: t('checkout.cart_number')
+      %span.help-block
     .row
       .col-sm-6
         .form-group
-          = f.label :name, 'Name on Card', class: 'control-label input-label'
-          = f.text_field :name, class: 'form-control', placeholder: 'Name on Card'
+          = f.label :name, t('checkout.name_on_card'), class: 'control-label input-label'
+          = f.text_field :name, class: 'form-control', placeholder: t('checkout.name_on_card')
           %span.help-block
       .col-sm-3
         .form-group
-          = f.label :mm_yy, 'MM / YY', class: 'control-label input-label'
-          = f.text_field :mm_yy, class: 'form-control', placeholder: 'MM / YY'
+          = f.label :mm_yy, t('checkout.mm_yy'), class: 'control-label input-label'
+          = f.text_field :mm_yy, class: 'form-control', placeholder: t('checkout.mm_yy')
           %span.help-block
       .col-sm-3
         .form-group.relative
-          = f.label :cvv, 'CVV', class: 'control-label input-label'
-          = f.password_field :cvv, class: 'form-control', placeholder: 'CVV', autocomplete: 'off'
+          = f.label :cvv, t('checkout.cvv'), class: 'control-label input-label'
+          = f.password_field :cvv, class: 'form-control', placeholder: t('checkout.cvv'), autocomplete: 'off'
           %span.help-block
           %i.fa.fa-question-circle.general-form-help{'data-toggle': 'tooltip', 'data-placement': :top, title: t('credit_card.tooltip')}
     = render 'checkout/order_summary'
-    = f.submit 'Save and Continue', class: 'btn btn-default center-block mb-80'
+    = f.submit t('checkout.save_and_continue'), class: 'btn btn-default center-block mb-80'
