--- a/app/views/carts/_order_summary.haml
+++ b/app/views/carts/_order_summary.haml
@@ -4,7 +4,7 @@
       .input-group.general-input-group
         = form_tag cart_path, method: :put
         = label_tag :name, t('cart.coupon'), class: 'input-label'
-        = text_field_tag(:name, nil, placeholder: 'Enter Your Coupon Code ', class: 'form-control mb-30')
+        = text_field_tag(:name, nil, placeholder: t('cart.coupon'), class: 'form-control mb-30')
         %div
           %button.btn.btn-primary.mr-5.mb-15.visible-xs-inline-block= t('cart.apply_coupon')
           = submit_tag t('cart.update'), class: 'btn btn-primary mb-15 res-block'
