--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,3 +14,8 @@
   color: black;
   text-shadow: 0 0 1px rgba(0,0,0,0.2);
 }
+
+a.text-as-link {
+  text-decoration: none;
+  color: rgb(51, 51, 51);
+}
