--- a/app/views/carts/_xs_order_items.haml
+++ b/app/views/carts/_xs_order_items.haml
@@ -3,8 +3,10 @@
     = button_to order_items_path(order_item), { data: { confirm: "Are you sure you wish to delete the book '#{order_item.book.title}' from your cart?" }, method: :delete, remote: true, class: "close general-cart-close", 'aria-label': 'Close' } do
       %span{'aria-hidden': "true"} &times;
     .general-img-wrap-table
-      %img.cart-img-shadow{src: "http://jonathantweedy.com/resources/thumbs/SmashingBook5ResponsiveWebDesign.jpg", alt: "design-book"}
-    %p.title= order_item.book.title
+      = link_to book_path(order_item.book) do
+        %img.cart-img-shadow{src: "http://jonathantweedy.com/resources/thumbs/SmashingBook5ResponsiveWebDesign.jpg", alt: "design-book"}
+    = link_to book_path(order_item.book), class: 'text-as-link' do
+      %p.title= order_item.book.title
     %table.table
       %tr
         %td
