do refactoring checkout show action

--- a/app/views/checkout/_progress.haml
+++ b/app/views/checkout/_progress.haml
@@ -1,6 +1,6 @@
 %h1.general-title-margin= t('cart.checkout')
 %ul.steps.list-inline
-  %li.step.clickable-step{ class: active_step?(:address), 'data-href': wizard_path(:address) }
+  %li.step.clickable-step{ class: active_step?(:addresses), 'data-href': wizard_path(:addresses) }
     %span.step-number 1
     %span.step-text.hidden-xs= t('settings.address')
   %li.step-divider
