--- a/app/views/checkout/addresses.haml
+++ b/app/views/checkout/addresses.haml
@@ -15,11 +15,13 @@
           %p.general-info-text all fields are required
         = f.fields_for @addresses.billing do |ff|
           = render 'shared/address', ff: ff
+          = f.hidden_field "[billing][order_id]", value: current_order.id
       .col-md-5.col-md-offset-1.mb-60
         .visible-xs.visible-sm
           %h3.general-subtitle= t('settings.shipping')
         = f.fields_for @addresses.shipping do |ff|
           = render 'shared/address', ff: ff
+          = f.hidden_field "[billing][order_id]", value: current_order.id
         .form-group.checkbox
           %label.checkbox-label
             = f.check_box :use_billing, class: 'checkbox-input', id: 'use_billing', hidden: true
