--- a/app/views/checkout/addresses.haml
+++ b/app/views/checkout/addresses.haml
@@ -21,7 +21,7 @@
           %h3.general-subtitle= t('settings.shipping')
         = f.fields_for @addresses.shipping do |ff|
           = render 'shared/address', ff: ff
-          = f.hidden_field "[billing][order_id]", value: current_order.id
+          = f.hidden_field "[shipping][order_id]", value: current_order.id
         .form-group.checkbox
           %label.checkbox-label
             = f.check_box :use_billing, class: 'checkbox-input', id: 'use_billing', hidden: true
