--- a/app/views/shared/_addresses_form.haml
+++ b/app/views/shared/_addresses_form.haml
@@ -1,5 +1,5 @@
 #addres.general-main-wrap.tab-pane.fade.in.active{role: "tabpanel"}
-  = form_with url: settings_addresses_path, id: 'addresses' do |f|
+  = form_for @addresses, url: settings_addresses_path do |f|
     .hidden-xs.hidden-sm
       .row
         .col-md-5
@@ -11,13 +11,15 @@
         .visible-xs.visible-sm
           %h3.general-subtitle.mt-0= t('settings.billing')
         = f.fields_for @addresses.billing do |ff|
-          = render 'shared/address', ff: ff
+          - bill_errors = @addresses.billing.errors
+          = render 'shared/address', ff: ff, errors: bill_errors
           = f.hidden_field "[billing][user_id]", value: current_user.id
       .col-md-5.col-md-offset-1.mb-25
         .visible-xs.visible-sm
           %h3.general-subtitle.mt-0= t('settings.shipping')
         = f.fields_for @addresses.shipping do |ff|
-          = render 'shared/address', ff: ff
+          - ship_errors = @addresses.shipping.errors
+          = render 'shared/address', ff: ff, errors: ship_errors
           = f.hidden_field "[shipping][user_id]", value: current_user.id
         .form-group.checkbox
           %label.checkbox-label
