--- a/app/views/checkout/partials/_addresses_short.haml
+++ b/app/views/checkout/partials/_addresses_short.haml
@@ -1,7 +1,7 @@
 %p.general-address
   = address.first_name + ' ' + address.last_name
   - if step != :complete
-    %span.general-edit.clickable-step{ 'data-href': wizard_path(:address) }=t('confirm.edit')
+    %span.general-edit.clickable-step{ 'data-href': wizard_path(:addresses) }=t('confirm.edit')
   %br
   = address.address
   %br
