improve review decorator, add image size versions for catalog ans slider, add block for inactive book, now user can not by inactive book

--- a/app/views/books/show.haml
+++ b/app/views/books/show.haml
@@ -30,7 +30,7 @@
                 %i.fa.fa-plus.line-height-40
           .col-xs-7.col-md-5
             = f.hidden_field :book_id, value: @book.id
-            = f.submit t('button.add_to_cart'), class: 'btn btn-default pull-right general-position'
+            = f.submit t('button.add_to_cart'), class: 'btn btn-default pull-right general-position', disabled: !@book.active
       .general-info-wrap.divider-lg
         %p= t('page.book.show.description')
         %p.lead.small.line-height-2
